welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: '(' expected but identifier found.
  if estSurOrange() == true
     ^RunHalf:7: error: '(' expected but identifier found.
  if estSurBiscuit() == tru
     ^